--- a/SNNavigationController/view_nav_tabbar_nav_view/MyDetailViewController.xib
+++ b/SNNavigationController/view_nav_tabbar_nav_view/MyDetailViewController.xib
@@ -14,6 +14,7 @@
             <connections>
                 <outlet property="tableView" destination="OqK-0z-HId" id="8hx-Wv-Byu"/>
                 <outlet property="view" destination="iN0-l3-epB" id="5QW-Y9-KIJ"/>
+                <outlet property="viewTest" destination="3eO-8q-yD7" id="Oih-gA-WNH"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
@@ -26,7 +27,7 @@
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                 </tableView>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="AeI-vm-OMZ">
-                    <rect key="frame" x="172" y="318" width="30" height="30"/>
+                    <rect key="frame" x="172.5" y="318" width="30" height="30"/>
                     <state key="normal" title="pop"/>
                     <connections>
                         <action selector="handleButton:" destination="-1" eventType="touchUpInside" id="woo-S4-PHf"/>
@@ -40,12 +41,19 @@
                     </constraints>
                 </view>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="NgJ-Hl-fpd">
-                    <rect key="frame" x="170" y="392" width="34" height="30"/>
+                    <rect key="frame" x="170.5" y="392" width="34" height="30"/>
                     <state key="normal" title="push"/>
                     <connections>
                         <action selector="handlePushButton:" destination="-1" eventType="touchUpInside" id="Zma-Pa-Z8S"/>
                     </connections>
                 </button>
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="3eO-8q-yD7">
+                    <rect key="frame" x="60" y="466" width="255" height="60"/>
+                    <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="60" id="q9m-91-H6y"/>
+                    </constraints>
+                </view>
             </subviews>
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
@@ -53,10 +61,14 @@
                 <constraint firstItem="AeI-vm-OMZ" firstAttribute="centerX" secondItem="iN0-l3-epB" secondAttribute="centerX" id="7Wk-Qo-uhE"/>
                 <constraint firstItem="AeI-vm-OMZ" firstAttribute="centerY" secondItem="iN0-l3-epB" secondAttribute="centerY" id="CEY-rk-kdo"/>
                 <constraint firstItem="OqK-0z-HId" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" id="Ddd-mG-Obk"/>
+                <constraint firstItem="3eO-8q-yD7" firstAttribute="centerX" secondItem="NgJ-Hl-fpd" secondAttribute="centerX" id="Dw7-4k-rLC"/>
                 <constraint firstItem="OqK-0z-HId" firstAttribute="top" secondItem="vUN-kp-3ea" secondAttribute="top" id="RTM-84-9tg"/>
                 <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="0HE-fE-KcE" secondAttribute="trailing" id="SGR-A6-Asm"/>
                 <constraint firstItem="0HE-fE-KcE" firstAttribute="top" secondItem="vUN-kp-3ea" secondAttribute="top" id="kDu-hU-fIx"/>
+                <constraint firstItem="3eO-8q-yD7" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" constant="60" id="mmx-oc-meJ"/>
+                <constraint firstItem="3eO-8q-yD7" firstAttribute="top" secondItem="NgJ-Hl-fpd" secondAttribute="bottom" constant="44" id="nCG-K6-vv9"/>
                 <constraint firstItem="0HE-fE-KcE" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" id="ndk-1G-Zhi"/>
+                <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="3eO-8q-yD7" secondAttribute="trailing" constant="60" id="rbJ-Bz-wNE"/>
                 <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="OqK-0z-HId" secondAttribute="trailing" id="rrn-rf-lZP"/>
                 <constraint firstItem="NgJ-Hl-fpd" firstAttribute="top" secondItem="AeI-vm-OMZ" secondAttribute="bottom" constant="44" id="xE1-KJ-NJQ"/>
                 <constraint firstItem="NgJ-Hl-fpd" firstAttribute="centerX" secondItem="AeI-vm-OMZ" secondAttribute="centerX" id="zwe-VL-7sy"/>
