导航栏标签交互

--- a/SNNavigationController/Base.lproj/Main.storyboard
+++ b/SNNavigationController/Base.lproj/Main.storyboard
@@ -545,8 +545,12 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="dUN-Y4-75X">
+                                <rect key="frame" x="0.0" y="64" width="375" height="603"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            </tableView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="uY2-pu-hXU">
-                                <rect key="frame" x="164.5" y="318.5" width="46" height="30"/>
+                                <rect key="frame" x="164" y="318" width="46" height="30"/>
                                 <state key="normal" title="Button"/>
                             </button>
                         </subviews>
@@ -554,6 +558,10 @@
                         <constraints>
                             <constraint firstItem="uY2-pu-hXU" firstAttribute="centerY" secondItem="IId-YN-imY" secondAttribute="centerY" id="K21-WC-EEX"/>
                             <constraint firstItem="uY2-pu-hXU" firstAttribute="centerX" secondItem="IId-YN-imY" secondAttribute="centerX" id="Oix-V2-OU7"/>
+                            <constraint firstItem="Rl9-D9-Z8A" firstAttribute="trailing" secondItem="dUN-Y4-75X" secondAttribute="trailing" id="Ro4-t6-Hxs"/>
+                            <constraint firstItem="Rl9-D9-Z8A" firstAttribute="bottom" secondItem="dUN-Y4-75X" secondAttribute="bottom" id="YKJ-mD-A1G"/>
+                            <constraint firstItem="dUN-Y4-75X" firstAttribute="leading" secondItem="Rl9-D9-Z8A" secondAttribute="leading" id="fyG-D7-50x"/>
+                            <constraint firstItem="dUN-Y4-75X" firstAttribute="top" secondItem="Rl9-D9-Z8A" secondAttribute="top" id="oZV-Ep-pES"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="Rl9-D9-Z8A"/>
                     </view>
